Metric tons of structural changes, like yoinking warnings in migrations and templating work. On op of that some actual designs where updated too

--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -3,7 +3,7 @@
 @inject IDialogService _dialogService
 
 <MudContainer>
-    <MudDataGrid T="Climate" Items="@ClimateData">
+    <MudDataGrid T="Climate" Items="@ClimateData" Class="overflow-x-hide">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Climate</MudText>
             <MudSpacer />
