--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -2,85 +2,87 @@
 @inject RaceService _raceService
 @inject NavigationManager _nav
 
-<MudContainer MaxWidth="MaxWidth.False">
-    <MudTabs>
-        <MudTabPanel Text="Q1">
-            @*
-            Table underneath is a good target for a refactor to a component, perhaps even a nested component!
-            Nested as in a component QualifyingSession implements a component Session (which can be implemented by practice!)
-            *@
-            <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)" id="q1-result-table" Dense="true" Class="extra-dense">
-                <ToolBarContent>
-                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
-                        <CountryFlag Code="@Model.Country" />
-                        <MudText Typo="Typo.h6">@Model.Name - QUALIFYING Q1</MudText>
-                        <MudSpacer />
-                        <MudButtonGroup Variant="Variant.Outlined">
-                            <ScreenshotButton TargetId="q1-result-table" />
-                            @if (advancedQ1 != Model.AmountRuns)
-                            {
-                                <MudButton OnClick="AdvanceQ1">Advance</MudButton>
-                            }
-                        </MudButtonGroup>
-                    </MudStack>
-                </ToolBarContent>
-                <HeaderContent>
-                    <MudTh>#</MudTh>
-                    <MudTh Class="pa-0"></MudTh>
-                    <MudTh>Driver</MudTh>
-                    <MudTh Class="number-col">No.</MudTh>
-                    <MudTh>Team</MudTh>
-                    <MudTh Class="number-col">PWR</MudTh>
-                    @for (int i = 1; i <= Model.AmountRuns; i++)
-                    {
-                        var j = i;
-                        <MudTh Class="number-col">@j</MudTh>
-                    }
-                    <MudTh Class="number-col">Score</MudTh>
-                    <MudTh>Gap</MudTh>
-                </HeaderContent>
-                <RowTemplate>
-                    <MudTd Class="number-col" Style="@PositionCutoffStyles(context.PositionQ1, Model.QualyAmountQ2, Model.MaximumRaceDrivers)">
-                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.PositionQ1</MudText>
-                    </MudTd>
-                    <MudTd Class="pa-0">
-                        <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
-                    </MudTd>
-                    <MudTd>
-                        <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                            <MudText Typo="Typo.body1">@context.FirstName</MudText>
-                            <MudText Typo="Typo.button">@context.LastName</MudText>
+@*
+    Tables underneath is a good target for a refactor to a component, perhaps even a nested component!
+    Nested as in a component QualifyingSession implements a component Session (which can be implemented by practice!)
+*@
+
+<MudContainer MaxWidth="MaxWidth.Large">
+    @if (!loading)
+    {
+        <MudTabs>
+            <MudTabPanel Text="Q1">
+                <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)" id="q1-result-table" Dense="true" Class="extra-dense">
+                    <ToolBarContent>
+                        <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
+                            <CountryFlag Code="@Model.Country" />
+                            <MudText Typo="Typo.h6">@Model.Name - QUALIFYING Q1</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                            <MudButtonGroup Variant="Variant.Outlined">
+                                <ScreenshotButton TargetId="q1-result-table" />
+                                @if (advancedQ1 != Model.AmountRuns)
+                                {
+                                    <MudButton OnClick="AdvanceQ1">Advance</MudButton>
+                                }
+                            </MudButtonGroup>
                         </MudStack>
-                    </MudTd>
-                    <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                        <MudText Typo="Typo.caption">@context.Number</MudText>
-                    </MudTd>
-                    <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
-                        <MudText>@context.TeamName</MudText>
-                    </MudTd>
-                    <MudTd Class="number-col">
-                        <MudText Typo="Typo.caption">@context.Power</MudText>
-                    </MudTd>
-                    @foreach (var runResult in context.RunValuesQ1)
-                    {
-                        <MudTd Class="number-col">
-                            <MudText Typo="Typo.caption">@runResult</MudText>
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>#</MudTh>
+                        <MudTh Class="pa-0"></MudTh>
+                        <MudTh>Driver</MudTh>
+                        <MudTh Class="number-col">No.</MudTh>
+                        <MudTh>Team</MudTh>
+                        <MudTh Class="number-col-lg">PWR</MudTh>
+                        @for (int i = 1; i <= Model.AmountRuns; i++)
+                        {
+                            var j = i;
+                            <MudTh Class="number-col-lg">@j</MudTh>
+                        }
+                        <MudTh Class="number-col-lg">Score</MudTh>
+                        <MudTh>Gap</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd Class="number-col" Style="@PositionCutoffStyles(context.PositionQ1, Model.QualyAmountQ2, Model.MaximumRaceDrivers)">
+                            <DriverPosition Number="@(context.PositionQ1)" Colour="@(context.Colour)" Accent="@(context.Accent)" />
                         </MudTd>
-                    }
-                    <MudTd Class="number-col">
-                        <MudText Typo="Typo.caption">@context.MaxScoreQ1</MudText>
-                    </MudTd>
-                    <MudTd>
-                        <MudText>+@(context.GapQ1)</MudText>
+                        <MudTd Class="pa-0">
+                            <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
+                        </MudTd>
+                        <MudTd>
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText Typo="Typo.body1">@context.FirstName</MudText>
+                                <MudText Typo="Typo.button">@context.LastName</MudText>
+                                <MudSpacer />
+                                <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                            </MudStack>
+                        </MudTd>
+                        <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
+                            <MudText Typo="Typo.caption">@context.Number</MudText>
+                        </MudTd>
+                        <MudTd>
+                            <MudText>@context.TeamName</MudText>
+                        </MudTd>
+                        <MudTd Class="number-col-lg">
+                            <MudText Typo="Typo.caption">@context.Power</MudText>
+                        </MudTd>
+                        @foreach (var runResult in context.RunValuesQ1)
+                        {
+                            <MudTd Class="number-col-lg">
+                                <MudText Typo="Typo.caption">@runResult</MudText>
+                            </MudTd>
+                        }
+                        <MudTd Class="number-col-lg">
+                            <MudText Typo="Typo.caption">@context.MaxScoreQ1</MudText>
+                        </MudTd>
+                        <MudTd>
+                            <MudText>+@(context.GapQ1)</MudText>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
             </MudTabPanel>
+
             <MudTabPanel Text="Q2" Disabled="@(advancedQ1 != Model.AmountRuns)">
-                @if (DriversInQ2 != null)
-                {
                 <MudTable Items="@DriversInQ2.OrderBy(e => e.PositionQ2)" id="q2-result-table" Dense="true" Class="extra-dense">
                     <ToolBarContent>
                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
@@ -113,7 +115,7 @@
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd Style="@PositionCutoffStyles(context.PositionQ2, Model.QualyAmountQ3)">
-                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.PositionQ2</MudText>
+                            <DriverPosition Number="@(context.PositionQ2)" Colour="@(context.Colour)" Accent="@(context.Accent)" />
                         </MudTd>
                         <MudTd Class="pa-0">
                             <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
@@ -129,7 +131,7 @@
                         <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                             <MudText Typo="Typo.caption">@context.Number</MudText>
                         </MudTd>
-                        <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
+                        <MudTd>
                             <MudText>@context.TeamName</MudText>
                         </MudTd>
                         <MudTd>
@@ -147,13 +149,11 @@
                         <MudTd>
                             <MudText>+@(context.GapQ2)</MudText>
                             </MudTd>
-                        </RowTemplate>
-                    </MudTable>
-            }
-        </MudTabPanel>
-        <MudTabPanel Text="Q3" Disabled="@(advancedQ2 != Model.AmountRuns)">
-            @if (DriversInQ3 != null)
-            {
+                    </RowTemplate>
+                </MudTable>
+            </MudTabPanel>
+
+            <MudTabPanel Text="Q3" Disabled="@(advancedQ2 != Model.AmountRuns)">
                 <MudTable Items="@DriversInQ3.OrderBy(e => e.PositionQ3)" id="q3-result-table" Dense="true" Class="extra-dense">
                     <ToolBarContent>
                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
@@ -190,7 +190,9 @@
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd>
-                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.PositionQ3</MudText>
+                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">
+                                <DriverPosition Number="@(context.PositionQ3)" Colour="@(context.Colour)" Accent="@(context.Accent)" />
+                            </MudText>
                         </MudTd>
                         <MudTd Class="pa-0">
                             <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
@@ -206,7 +208,7 @@
                         <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                             <MudText Typo="Typo.caption">@context.Number</MudText>
                         </MudTd>
-                        <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
+                        <MudTd>
                             <MudText>@context.TeamName</MudText>
                         </MudTd>
                         <MudTd>
@@ -223,12 +225,12 @@
                         </MudTd>
                         <MudTd>
                             <MudText>+@(context.GapQ3)</MudText>
-                            </MudTd>
-                        </RowTemplate>
-                    </MudTable>
-            }
-        </MudTabPanel>
-    </MudTabs>
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudTabPanel>
+        </MudTabs>
+    }
 </MudContainer>
 
 @code {
@@ -238,9 +240,9 @@
 
     // big ass hmm about doing it like this tbh
     // this also does not work yet
-    private List<QualifyingDriver> DriversInQ1 { get; set; }
-    private List<QualifyingDriver>? DriversInQ2 { get; set; }
-    private List<QualifyingDriver>? DriversInQ3 { get; set; }
+    private List<QualifyingDriver> DriversInQ1 { get; set; } = new();
+    private List<QualifyingDriver> DriversInQ2 { get; set; } = new();
+    private List<QualifyingDriver> DriversInQ3 { get; set; } = new();
 
     // Two ways to do this: three different racedriver lists for each session
     // Alternatively make a custom class which has an identifier for which session the values are
@@ -251,7 +253,9 @@
     protected override async Task OnInitializedAsync()
     {
         Model = await _raceService.RetrieveQualifyingModel(RaceId);
-        DriversInQ1 = Model.QualifyingDrivers;
+
+        foreach (var driver in Model.QualifyingDrivers)
+            DriversInQ1.Add(driver);
 
         loading = false;
     }
@@ -278,66 +282,56 @@
 
         if (advancedQ1 == Model.AmountRuns)
         {
-            DriversInQ2 = DriversInQ1
-                .OrderBy(e => e.PositionQ1)
-                .Take(Model.QualyAmountQ2)
-                .ToList();
+            foreach (var driver in DriversInQ1.OrderBy(e => e.PositionQ1).Take(Model.QualyAmountQ2))
+                DriversInQ2.Add(driver);
         }
     }
 
     private void AdvanceQ2()
     {
-        if (DriversInQ2 != null)
+        var positionIndex = 0;
+
+        foreach (var driver in DriversInQ2)
         {
-            var positionIndex = 0;
+            var qualifyingResult = driver.GetQualifyingResult(Model.QualyRng);
+            driver.RunValuesQ2[advancedQ2] = qualifyingResult;
+        }
 
-            foreach (var driver in DriversInQ2)
-            {
-                var qualifyingResult = driver.GetQualifyingResult(Model.QualyRng);
-                driver.RunValuesQ2[advancedQ2] = qualifyingResult;
-            }
+        var highestScore = DriversInQ2.SelectMany(e => e.RunValuesQ2).Max();
 
-            var highestScore = DriversInQ2.SelectMany(e => e.RunValuesQ2).Max();
+        foreach (var driver in DriversInQ2.OrderByDescending(e => e.MaxScoreQ2))
+        {
+            driver.Position = ++positionIndex;
+            driver.PositionQ2 = positionIndex;
+            driver.GapQ2 = Math.Round(((highestScore - driver.MaxScoreQ2) * Model.GapMarge), 2);
+        }
 
-            foreach (var driver in DriversInQ2.OrderByDescending(e => e.MaxScoreQ2))
-            {
-                driver.Position = ++positionIndex;
-                driver.PositionQ2 = positionIndex;
-                driver.GapQ2 = Math.Round(((highestScore - driver.MaxScoreQ2) * Model.GapMarge), 2);
-            }
+        advancedQ2++;
 
-            advancedQ2++;
-
-            if (advancedQ2 == Model.AmountRuns)
-            {
-                DriversInQ3 = DriversInQ2
-                    .OrderBy(e => e.PositionQ2)
-                    .Take(Model.QualyAmountQ3)
-                    .ToList();
-            }
+        if (advancedQ2 == Model.AmountRuns)
+        {
+            foreach (var driver in DriversInQ2.OrderBy(e => e.PositionQ2).Take(Model.QualyAmountQ3))
+                DriversInQ3.Add(driver);
         }
     }
 
     private void AdvanceQ3()
     {
-        if (DriversInQ3 != null)
+        var positionIndex = 0;
+
+        foreach (var driver in DriversInQ3)
+            driver.RunValuesQ3[advancedQ3] = driver.GetQualifyingResult(Model.QualyRng);
+
+        var highestScore = DriversInQ3.SelectMany(e => e.RunValuesQ3).Max();
+
+        foreach (var driver in DriversInQ3.OrderByDescending(e => e.MaxScoreQ3))
         {
-            var positionIndex = 0;
-
-            foreach (var driver in DriversInQ3)
-                driver.RunValuesQ3[advancedQ3] = driver.GetQualifyingResult(Model.QualyRng);
-
-            var highestScore = DriversInQ3.SelectMany(e => e.RunValuesQ3).Max();
-
-            foreach (var driver in DriversInQ3.OrderByDescending(e => e.MaxScoreQ3))
-            {
-                driver.Position = ++positionIndex;
-                driver.PositionQ3 = positionIndex;
-                driver.GapQ3 = Math.Round(((highestScore - driver.MaxScoreQ3) * Model.GapMarge), 2);
-            }
-
-            advancedQ3++;
+            driver.Position = ++positionIndex;
+            driver.PositionQ3 = positionIndex;
+            driver.GapQ3 = Math.Round(((highestScore - driver.MaxScoreQ3) * Model.GapMarge), 2);
         }
+
+        advancedQ3++;
     }
 
     private string PositionCutoffStyles(int position, int sessionCutoff, int? raceCutoff = null)
