--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -58,8 +58,8 @@
         TeamData = await TeamService.GetTeams();
     }
 
-    async Task AddTeam() => await UpdateTeam(new Team());
-    async Task UpdateTeam(Team item)
+    async Task AddTeam() => await UpdateTeam(null);
+    async Task UpdateTeam(Team? item)
     {
         var parameters = new DialogParameters 
         { 
