--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -117,7 +117,7 @@
     string? exampleStore;
     string newExampleString = "Stored and retrieved from the local storage";
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
