--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -88,17 +88,15 @@
 </MudContainer>
 
 @code {
-    List<Track> TrackData = new();
-
-    bool _readOnly = false;
+    List<Track> TrackData;
 
     protected override async Task OnInitializedAsync()
     {
         TrackData = await TrackService.GetTracks();
     }
 
-    async Task AddTrack() => await UpdateTrack(new Track());
-    async Task UpdateTrack(Track item)
+    async Task AddTrack() => await UpdateTrack(null);
+    async Task UpdateTrack(Track? item)
     {
         var parameters = new DialogParameters 
         { 
